fix bug in day1-part2::get_last_digit

--- a/Day1/CMakeLists.txt
+++ b/Day1/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.25)
-project(aoc_03_12_2023)
+project(Day1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(aoc_day1 main.cpp)
+add_executable(aoc_day1_part1 part1.cpp)
+add_executable(aoc_day1_part2 part2.cpp)
