--- a/Day1/CMakeLists.txt
+++ b/Day1/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Day1)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(aoc_day1_part1 day1-part1.cpp)
-add_executable(aoc_day1_part2 part2.cpp)
+add_executable(aoc_day1_part2 day1-part2.cpp)
