--- a/Day2/CMakeLists.txt
+++ b/Day2/CMakeLists.txt
@@ -4,3 +4,4 @@ project(Day2)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(aoc_day2_part1 day2-part1.cpp)
+add_executable(aoc_day2_part2 day2-part2.cpp)
